--- a/wisdomCampus/html/login.html
+++ b/wisdomCampus/html/login.html
@@ -117,7 +117,7 @@
 				
 			}
 		});
-		//添加课程时，判断是否输入了值，有没有重复
+		//判断是否输入了值
 		var checkInput = function(text) {
 			if(text.trim().length == 0) {
 				mui.toast('请输入账号密码');
