请假详情界面

--- a/wisdomCampus/html/check-detail.html
+++ b/wisdomCampus/html/check-detail.html
@@ -166,9 +166,9 @@
 	</head>
 
 	<body>
-		<header class="mui-bar mui-bar-nav">
+		<header class="mui-bar mui-bar-nav" style="background-color: #3C9BFE;">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">审批详情</h1>
+			<h1 class="mui-title" style="color: white;">审批详情</h1>
 		</header>
 		<div class="mui-content" id="checkDetailData">
 			<div class="leave-detail">
