--- a/wisdomCampus/html/home.html
+++ b/wisdomCampus/html/home.html
@@ -6,13 +6,8 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
-		<script type="text/javascript" src="../js/mui.min.js"></script>
-		<script type="text/javascript" src="../js/utils/utils.js"></script>
-		<script type="text/javascript" src="../js/utils/storageutil.js"></script>
+		<link href="../css/weui.min.css" rel="stylesheet" />
 
-		<script src="../js/home.js"></script>
-		<script type="text/javascript">
-		</script>
 		<style type="text/css">
 			.circular-square {
 				border-radius: 50%;
@@ -39,12 +34,76 @@
 				border-right: 0px solid #eee;
 				border-bottom: 0px solid #eee
 			}
+			
+			.mine-container {
+				position: fixed;
+				top: 0;
+				left: 0;
+				right: 0;
+				bottom: 0;
+				z-index: 1000;
+				background-color: rgba(0, 0, 0, 0.3);
+			}
+			
+			.display-none {
+				display: none;
+			}
+			
+			.display-block {
+				display: block;
+			}
+			
+			.mine-left-container {
+				position: fixed;
+				top: 0;
+				left: 0;
+				bottom: 0;
+				right: 30%;
+				background-color: #D9D9D9;
+				/*display: flex;
+				display: -webkit-flex;
+				flex-direction: column;*/
+			}
+			
+			.weui-cells {
+				margin-top: 0;
+			}
+			
+			.head-portrait {
+				width: 100px;
+				height: 100px;
+				border-radius: 50%;
+			}
+			
+			.user-name {
+				font-size: 22px;
+				color: #333333;
+			}
+			
+			.user-info {
+				background-color: white;
+				padding: 50px 0 50px 0;
+				text-align: center;
+				margin-bottom: 20px;
+			}
+			
+			.weui-cell.weui-cell_access {
+				background-color: white;
+			}
+			
+			.weui-btn.weui-btn_warn {
+				position: absolute;
+				bottom: 50px;
+				margin-left: 5%;
+				width: 90%;
+			}
 		</style>
 
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav common-background-bar">
+			<a href="javascript:mine.isMineShow=true;" class="mui-icon  mui-pull-left mui-icon-chatbubble"></a>
 			<h1 class="mui-title common-color-white common-font-family-Bold">首页</h1>
 		</header>
 		<div class="mui-scroll-wrapper" style="margin-top: 45px;">
@@ -65,26 +124,75 @@
 				</div>
 			</div>
 		</div>
+		<div id="mine" class="weui-cells mine-container" v-on:click="isMineShow=false" v-show="isMineShow">
+			<div class="mine-left-container" v-on:click.stop="">
+				<div class="user-info">
+					<img class="head-portrait" src="../img/firstPage/firstPage0.png" />
+					<p class="user-name">name</p>
+				</div>
+				<a v-for="setting in settings" class="weui-cell weui-cell_access"  v-on:click="jumpToDetail(setting)">
+					<div class="weui-cell__bd">
+						<p><span></span>{{setting.name}}</p>
+					</div>
+					<div class="weui-cell__ft"></div>
+				</a>
+				<a class="weui-btn weui-btn_warn" v-on:click="quitLogin">
+					退出登录
+				</a>
+			</div>
+		</div>
+		<script type="text/javascript" src="../js/mui.min.js"></script>
+		<script type="text/javascript" src="../js/utils/utils.js"></script>
+		<script type="text/javascript" src="../js/utils/storageutil.js"></script>
+		<script type="text/javascript" src="../js/vue.js"></script>
+
+		<script src="../js/home.js"></script>
+		<script>
+			mui('.mui-scroll-wrapper').scroll({
+				indicators: true, //是否显示滚动条
+			});
+			var titles = ["", "", ""]
+			//加黑条
+			addStrip(getImgArray())
+			//加图片
+			addImg(getImgArray(), titles)
+			var slider = mui("#slider");
+			//轮播开始
+			slider.slider({
+				interval: 5000
+			});
+			//圆圈按钮
+			getHomeCircle('circler');
+			mui(".mui-table-view").on('tap', 'a', function() {
+				location.href = "all.html";
+			})
+			var mine = new Vue({
+				el: "#mine",
+				data: {
+					settings: [{
+						name: "密码修改",
+						icon: "",
+						href: ""
+					}, {
+						name: "关于我们",
+						icon: "",
+						href: ""
+					}],
+					isMineShow: false //屏蔽或显示我的界面
+				},
+				methods: {
+					quitLogin: function() { //退出登录
+						this.isMineShow = false;
+						history.go(-1);
+					},
+					jumpToDetail: function(setting) {
+						console.log("dfffff")
+						this.isMineShow = false;
+						location.href = setting.href;
+					}
+				}
+			})
+		</script>
 	</body>
-	<script>
-		mui('.mui-scroll-wrapper').scroll({
-			indicators: true, //是否显示滚动条
-		});
-		var titles = ["", "", ""]
-		//加黑条
-		addStrip(getImgArray())
-		//加图片
-		addImg(getImgArray(), titles)
-		var slider = mui("#slider");
-		//轮播开始
-		slider.slider({
-			interval: 5000
-		});
-		//圆圈按钮
-		getHomeCircle('circler');
-		mui(".mui-table-view").on('tap', 'a', function() {
-			location.href = "all.html"
-		})
-	</script>
 
 </html>
