--- a/wisdomCampus/html/login.html
+++ b/wisdomCampus/html/login.html
@@ -48,12 +48,15 @@
 	<script src='../js/lib/crypto-js/require.js'></script>
 	<script src='../js/utils/signHmacSHA1.js'></script>
 	<script src='../js/lib/jquery.js'></script>
-	<script src="../js/PublicProtocol.js"></script>
+	<script src="../js/publicProtocol.js"></script>
 	<script src='../js/utils/sortSign.js'></script>
 	<script src="../js/utils/myStorage.js"></script>
 	<script src="../js/utils/storageKeyName.js"></script>
 	<script src="../js/jquery-weui.min.js"></script>
-	<script>
+	<script type="text/javascript">
+			$(function() {
+				
+			});
 		var tempModel = {
 			uuid: '',
 			appid: ''
