--- a/wisdomCampus/html/noticeDetails.html
+++ b/wisdomCampus/html/noticeDetails.html
@@ -103,10 +103,10 @@
 			$(function() {
 				var curPage = utils.getSessionStorageByUrlsKey();
 				console.log('2222:' + JSON.stringify(curPage));
-				var curPage = {
-					"id": "17", //通知ID
-					"flag": 0//1我发送的，0发给我的
-				}
+//				var curPage = {
+//					"id": "17", //通知ID
+//					"flag": 0//1我发送的，0发给我的
+//				}
 				//获取当前人员信息
 				getNoticeDetail(curPage.id);
 			});
