--- a/wisdomCampus/html/home.html
+++ b/wisdomCampus/html/home.html
@@ -32,7 +32,7 @@
 				padding: 11px 15px;
 				vertical-align: top;
 				border-right: 0px solid #eee;
-				border-bottom: 0px solid #eee
+				border-bottom: 0px solid #eee;
 			}
 			
 			.mine-container {
