--- a/wisdomCampus/html/check-detail.html
+++ b/wisdomCampus/html/check-detail.html
@@ -213,7 +213,7 @@
 		</div>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/vue.js"></script>
-		<script src="../js/PublicProtocol.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/demoCssJs/jquery-2.1.4.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/demoCssJs/jquery-weui.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/utils/utils.js"></script>
